# ai-ai-bias

./: .environment  .gitignore  .nfs0000000003e9ee9b0000002f  README.md  analysis_results.json  analysis_table.csv  final_human_results_gpt4.csv  plots.ipynb  postprocess.ipynb  postprocess.no_listing.ipynb  preferences.ipynb  pyproject.toml  railway.toml  requirements.txt  result-plot2.ipynb  results-plot.ipynb  results_by_item_type.csv  run-all-gavento.sh  run.movies.sh  run.paper.sh  run.products.sh  run.proposals.desc.sh  run.proposals.gpt4.sh  run.proposals.llama7b.sh  run.proposals.qwen7b.sh  run.proposals.sh  run.py  run.sh  start.sh  updated_data_with_all_gpt4_comparisons.csv
.circleci/: config.yml
.upsun/: config.yaml
context_cache/: .nfs0000000003f8139600000030  comparison_results.sqlite
context_cache.20250111_movies/: comparison_results.sqlite
context_cache.bak2/: comparison_results.sqlite
context_cache.bak3/: comparison_results.sqlite
context_cache.bak4/: comparison_results.sqlite
context_cache.bak6/: comparison_results.sqlite
context_cache_/: comparison_results.sqlite
context_cache_2025-01-18_23-21-43/: comparison_results.sqlite
context_cache_2025-01-18_23-49-27/: comparison_results.sqlite
context_cache_2025-01-19_00-09-55/: comparison_results.sqlite
context_cache_2025-01-19_00-16-00/: comparison_results.sqlite
context_cache_2025-01-19_00-22-31/: comparison_results.sqlite
context_cache_gpt4/: comparison_results.sqlite
first_item_bias_results/: 250118T2145.html  250118T2210.html  250118T2256.json  250118T2320.json  250118T2348.html  (+10 more)
(+5092 files in other folders)
